--- a/base/changes.txt
+++ b/base/changes.txt
@@ -6,6 +6,10 @@ to completeness or accuracy and it contains some references to files that are
 not part of the distribution.
 ================================================================================
 
+2024-11-01  Joseph Wright  <Joseph.Wright@latex-project.org>
+	* ltcmd.dtx, usrguide.tex
+	New "f"-type argument
+
 ================================================================================
 All changes above are only part of the development branch for the next release.
 ================================================================================
