Add tab char to \dospecials
See latex3/latex3#762

--- a/base/ltdirchk.dtx
+++ b/base/ltdirchk.dtx
@@ -38,7 +38,7 @@
 % \fi
 % \fi
 \ProvidesFile{ltdirchk.dtx}
-             [2024/02/11 v1.3a LaTeX Kernel (System Dependent Parts)]
+             [2024/11/02 v1.3b LaTeX Kernel (System Dependent Parts)]
 % \iffalse
 % \iffalse
 \documentclass{ltxdoc}
@@ -307,6 +307,7 @@
 %<initex>\fi
 %    \end{macrocode}
 %
+% \changes{v1.3b}{2024/11/02}{Add tab char to \cs{dospecials}}
 % That distraction over, back to the basics of a format.
 %    \begin{macrocode}
 \catcode`\#=6
@@ -322,7 +323,7 @@
 \newlinechar`\^^J
 \def\typeout{\immediate\write17}
 \def\dospecials{\do\ \do\\\do\{\do\}\do\$\do\&%
-  \do\#\do\^\do\_\do\%\do\~}
+  \do\#\do\^\do\_\do\%\do\~\do\^^I}
 \def\@makeother#1{\catcode`#1=12\relax}
 \def\space{ }
 \def\@tempswafalse{\let\if@tempswa\iffalse}
