--- a/base/ltplain.dtx
+++ b/base/ltplain.dtx
@@ -32,7 +32,7 @@
 %<*driver>
 % \fi
 \ProvidesFile{ltplain.dtx}
-             [2024/02/08 v2.3j LaTeX Kernel (Plain TeX)]
+             [2024/11/02 v2.3k LaTeX Kernel (Plain TeX)]
 % \iffalse
 \documentclass{ltxdoc}
 \GetFileInfo{ltplain.dtx}
@@ -137,12 +137,13 @@
 % |\catcode`\a=11 ... \catcode`\z=11 %| lowercase letters\\
 % all others are type 12 (other)
 %
+% \changes{v1.3k}{2024/11/02}{Add tab char to \cs{dospecials}}
 % Here is a list of the characters that have been specially catcoded:
 %    \begin{macrocode}
 \def\dospecials{\do\ \do\\\do\{\do\}\do\$\do\&%
-  \do\#\do\^\do\_\do\%\do\~}
+  \do\#\do\^\do\_\do\%\do\~\do\^^I}
 %    \end{macrocode}
-% (not counting ascii null, tab, linefeed, formfeed, return, delete)
+% (not counting ascii null, linefeed, formfeed, return, delete)
 % Each symbol in the list is preceded by \do, which can be defined
 % if you want to do something to every item in the list.
 %
