--- a/base/doc/ltnews41.tex
+++ b/base/doc/ltnews41.tex
@@ -154,7 +154,7 @@
 In \LaTeX{} News~38, we described the extension of \cs{verb}, etc., to cover
 the tab character as equivalent to a space. We have now added tabs to the
 standard list of characters covered by \cs{dospecials}. This allows them to
-used in for example a \texttt{v}~specification document command without
+be used in for example a \texttt{v}~specification document command without
 additional steps.
 
 \section{Bug fixes}
